<resources>
    <string name="app_name">Chat Radar</string>
    <string name="desarrollador">Giovanny Soto</string>
    <string name="correo">Correo</string>
    <string name="pass">Password</string>
    <string name="pass2">Confirme Password</string>
    <string name="ingresar">Iniciar Session</string>
    <string name="registrarse">Registrarse</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="menu_Salir">Cerrar Sesion</string>
    <string name="menu">Menu</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="chat">CHAT</string>
    <string name="buscando">Buscando ...</string>
    <string name="mensaje">Escribe un mensaje</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>